tests/NormalTests/paczka2/big_fuzzy/71619107.err
Error in line 5: OStnJ0Rgs S976 77,7
Error in line 8: 0w0EdIKVPzj A569 61,5
Error in line 9: OStnJ0Rgs S761 92,1
Error in line 16: OStnJ0Rgs S976 19,4
Error in line 19: OStnJ0Rgs S761 15,4
Error in line 30: A569 S976 270,1
Error in line 41: KXRG3j`7Og S976 25,3
Error in line 34: jAN8xcx3 S976 24,0
Error in line 38: A569 S761 62,6
Error in line 56: A569 S976 10,5
Error in line 67: OStnJ0Rgs S761 90,0
Error in line 68: OStnJ0Rgs A448 82,2
Error in line 75: 4Fhau A448 28,4
Error in line 88: jAN8xcx3 A569 76,8
Error in line 85: A569 S761 68,7
Error in line 74: KXRG3jl7Og S976 433,3
Error in line 126: A569 S761 85,3
Error in line 132: A569 A569 54,8
Error in line 134: 4Fhau A569 21,8
Error in line 140: OStnJ0Rgs A448 48,44
Error in line 136: OStnJ0Rgs S976 17,3
Error in line 143: OStnJ0Rgs A448 192,6
Error in line 156: jAN8xcx3 S761 1,1
Error in line 163: jAN8xcx3 A569 162,79
Error in line 159: KXRG3jl7Og S761 43,8
Error in line 173: jAN8xcx3 A448 91,5
Error in line 186: jAN8xcx3 S761 91,9
Error in line 182: KXRG3jl7Og A569 22,4
Error in line 192: KXRG3jl7Og S761 92,8
Error in line 197: jAN8xcx3 S761 ,6
Error in line 202: 0w0EdIKVPzj S976 -11,6
Error in line 189: jAN8xcx3 S976 83,1
Error in line 198: 0w0EdIKVPzj S976 35,3
Error in line 205: 4Fhau A569 218,2
Error in line 204: jAN8xcx3 S761 2,8
Error in line 200: hbC7ccMNCm S761 37,3
Error in line 208: 4Fhau A448 65,6
Error in line 218: hbC7ccMNCm A569 78,7
Error in line 228: KXRG3jl7Og A569 122,1
Error in line 232: OStnJ0Rgs S976 128,3
Error in line 244: OStnJ0Rgs A448 84,9
Error in line 247: 4Fhau S761 94,5
Error in line 242: jAN8xcx3 S976 5,2
